--- a/style.css
+++ b/style.css
@@ -1,5 +1,47 @@
 body {
+  background-color: rgb(243, 196, 242);
   width: 100%;
   height: 100%;
   margin: 0;
+}
+h1 {
+  text-align: center;
+}
+nav > a {
+  background-color: rgb(244, 163, 155) ;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+nav {
+  text-align: center;
+}
+
+
+img {
+  margin: auto;
+  display: block;
+}
+#featured-property figcaption {
+  text-align: center;
+  font-size: 12px;
+}
+
+#featured-property p{
+  width: 800px;
+  margin: auto;
+  vertical-align: 20px;
+  margin-bottom: 25px;
+}
+#featured-property figcaption {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#details div {
+  float: left;
+}
+div {
+  background-color: coral;
+  text-align: center;
+  width: 25%;
 }
